<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_bin"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/nav_bin" />
        <item
            android:id="@+id/nav_hashtags"
            android:icon="@drawable/ic_menu_hashtag"
            android:title="@string/nav_hashtag" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/authorization">
        <menu>
            <item
                android:id="@+id/nav_auth"
                android:icon="@drawable/ic_menu_auth"
                android:title="@string/nav_login" />
            <item
                android:id="@+id/nav_sync"
                android:icon="@android:drawable/ic_popup_sync"
                android:title="@string/nav_sync" />
        </menu>
    </item>

</menu>
